@@ -28,6 +28,8 @@ Core and Builtins
 Library
 -------
 
+- Issue #12878: Expose a __dict__ attribute on io.IOBase and its subclasses.
+
 - Issue #12636: IDLE reads the coding cookie when executing a Python script.
 
 - Issue #10946: The distutils commands bdist_dumb, bdist_wininst and bdist_msi
